# gdcruiser

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
src/gdcruiser/: __init__.py  analyzer.py  cli.py  scanner.py
src/gdcruiser/config/: __init__.py  loader.py  models.py  validator.py
src/gdcruiser/graph/: __init__.py  cycles.py  dependency.py  node.py
src/gdcruiser/output/: __init__.py  dot.py  json.py  mermaid.py  text.py  violations.py
src/gdcruiser/parser/: __init__.py  gdscript.py  patterns.py  tscn.py
src/gdcruiser/rules/: __init__.py  engine.py  matcher.py  models.py
src/gdcruiser/symbols/: __init__.py  table.py
tests/: test_analyzer.py  test_cli.py  test_config.py  test_gdcruiser.py  test_graph.py  test_output.py  test_parser.py  test_patterns.py  test_rules.py
tests/fixtures/: base_entity.gd  config.gd  cycle_a.gd  cycle_b.gd  enemy.gd  game_manager.gd  inventory.gd  player.gd  player.tscn  project.godot
