[project]
name = "gdcruiser"
version = "1.0.0"
description = "Dependency analyzer for Godot/GDScript projects"
readme = "README.md"
authors = [
    { name = "LeTuR", email = "magicletur@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
gdcruiser = "gdcruiser:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.semantic_release]
version_toml = []
branch = "main"
tag_format = "v{version}"
commit_message = ""

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
type = "github"
